--- a/MyBlog/templates/home/home.html
+++ b/MyBlog/templates/home/home.html
@@ -1,3 +1,36 @@
 {% extends 'base.html' %}
 {% block title %} Home {% endblock title %}
-{% block body %}{% endblock body %}
+{% block homeactive %} Home {% endblock homeactive %}
+{% block body %}
+<div class="container">
+  <div class="jumbotron my-4">
+    <h1 class="display-4"> Welcome to my Blog</h1>
+    <p class="lead">This is a simple blog app that conatains like, comment features on the published articles</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="/blog" role="button">Go to Blog</a>
+  </div>
+</div>
+
+<div class="container">
+  <h2>Popular BlogPosts</h2>
+  <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 mb-4 shadow-sm h-md-250 position-relative">
+    <div class="col p-4 d-flex flex-column position-static">
+      <strong class="d-inline-block mb-2 text-primary">World</strong>
+      <h3 class="mb-0">Featured post</h3>
+      <div class="mb-1 text-muted">Nov 12</div>
+      <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+        content.</p>
+        <div>
+          <a href="/blog" role="button" class="btn btn-primary">Go to the blog Section</a>
+
+        </div>
+    </div>
+    <div class="col-auto d-none d-lg-block">
+
+    </div>
+  </div>
+</div>
+
+
+{% endblock body %}
