--- a/MyBlog/templates/base.html
+++ b/MyBlog/templates/base.html
@@ -19,16 +19,16 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mx-3">
-            <li class="nav-item active">
+            <li class="nav-item {% block homeactive %} {% endblock homeactive %}">
               <a class="nav-link" href="/"> Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item {% block Contactactive %} {% endblock Contactactive %}">
               <a class="nav-link" href="/contact"> Contact</a>
             </li>
-             <li class="nav-item active">
+             <li class="nav-item {% block aboutactive %} {% endblock aboutactive %}">
               <a class="nav-link" href="/about"> About</a>
             </li>
-             <li class="nav-item active">
+             <li class="nav-item {% block blogactive %} {% endblock blogactive%}">
               <a class="nav-link" href="/blog"> Blog</a>
             </li>
           
@@ -40,6 +40,14 @@
           </form>
         </div>
       </nav>
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show" role="alert">
+  <strong>The Message is:</strong> {{ message }}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{% endfor %}
  {% block body %} {% endblock body %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
