--- a/MyBlog/templates/blog/blogHome.html
+++ b/MyBlog/templates/blog/blogHome.html
@@ -1,3 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Blog {% endblock title %}
-{% block body %} {% endblock body %} 
+{% block body %}
+{% for post in allPosts %}
+<div class="container">
+  <h2>Popular BlogPosts</h2>
+  <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 mb-4 shadow-sm h-md-250 position-relative">
+    <div class="col p-4 d-flex flex-column position-static">
+      <strong class="d-inline-block mb-2 text-primary">World</strong>
+      <h3 class="mb-0">{{post.title}}</h3>
+      <div class="mb-1 text-muted">{{post.datetime}}</div>
+      <p class="card-text mb-auto">{{post.content | truncatechars:500 }}.</p>
+        <div>
+          <a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+
+        </div>
+    </div>
+    <div class="col-auto d-none d-lg-block">
+
+    </div>
+  </div>
+</div>
+{% endfor %}
+ {% endblock body %} 
