--- a/MyBlog/templates/home/contact.html
+++ b/MyBlog/templates/home/contact.html
@@ -1,14 +1,20 @@
 {% extends 'base.html'%}
 {% block title %}Contact {% endblock title %}
+{% block contactactive %} active {% endblock contactactive %}
 {% block body %}
-
-<div class="container my-4" style="width: 50%;">
+<style>
+@media(min-width:767px){
+#container1{
+  width:50%;
+}}
+</style>
+<div class="container my-4" id="container1">
     <h1>Contact Form</h1>
-<form method="post" action="/">
+<form method="post" action="/contact">
     {% csrf_token %}
     <div class="form-group">
         <label for="name">Name</label>
-        <input type="name" class="form-control" name="name" id="name" aria-describedby="name">  
+        <input type="name" class="form-control" name="name" id="name" aria-describedby="name" placeholder="Your name is totally a secret">  
         </div>
  
         <div class="form-group">
