contact data added

--- a/MyBlog/home/templates/home/contact.html
+++ b/MyBlog/home/templates/home/contact.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="container my-4" style="width: 50%;">
     <h1>Contact Form</h1>
-    <form method="post" action="/">
+    <form method="post" action="/contact">
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Name</label>
