--- a/MyBlog/blog/templates/blog/index.html
+++ b/MyBlog/blog/templates/blog/index.html
@@ -1,4 +1,23 @@
 {% extends 'base.html' %}
 {% block title %}Blog{% endblock title %}
+{% block blogactive %}active
+{% endblock blogactive %}
 {% block body %}
+<div class="container my-4">
+    <h2>Popular articles by us</h2>
+    <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                additional content.</p>
+            <div><a href="/blog/blogpost" role="button" class="btn btn-primary">Continue reading</a>
+            </div>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+        </div>
+    </div>
+
+</div>
 {% endblock body %}
