--- a/MyBlog/home/templates/base.html
+++ b/MyBlog/home/templates/base.html
@@ -23,16 +23,16 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto mx-3">
-        <li class="nav-item active">
+        <li class="nav-item {% block homeactive %}{% endblock homeactive %}">
           <a class="nav-link" href="/"> Home</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item {% block contactactive %}{% endblock contactactive %}">
           <a class="nav-link" href="/contact"> Contact</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item {% block aboutactive %}{% endblock aboutactive %}">
           <a class="nav-link" href="/about"> About</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item {% block blogactive %}{% endblock blogactive %}">
           <a class="nav-link" href="/blog"> Blog</a>
         </li>
 
@@ -45,13 +45,14 @@
     </div>
   </nav>
 
-
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+{% for message in messages %}
+  <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show" role="alert">
+    <strong>Message:</strong>{{message}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
+  {% endfor %}
   {% block body %} {% endblock body %}
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
