--- a/MyBlog/home/templates/home/about.html
+++ b/MyBlog/home/templates/home/about.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}About{% endblock title %}
+ {% block aboutactive %}active
+{% endblock aboutactive %}
 {% block body %}
 {% endblock body %}
