--- a/MyBlog/home/templates/home/contact.html
+++ b/MyBlog/home/templates/home/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}BlogPost
+{% block title %}Contact
 {% endblock title %}
+ {% block contactactive %}active
+{% endblock contactactive %}
 {% block body %}
 <div class="container my-4" style="width: 50%;">
     <h1>Contact Form</h1>
