--- a/MyBlog/blog/templates/blog/blogpost.html
+++ b/MyBlog/blog/templates/blog/blogpost.html
@@ -2,3 +2,12 @@
 {% block title %}BlogPost{% endblock title %}
 {% block blogactive %}active
 {% endblock blogactive %}
+{% block body %}
+<div class="container my-3">
+        <h2 class="blog-post-title">{{post.title}}</h2>
+        <p class="blog-post-meta">{{post.timestamp}} by <a href="/about">{{post.author}}</a></p>
+
+        <p>{{post.content}}</p>
+        <hr>
+        </div>
+{% endblock body %}
