--- a/MyBlog/home/templates/base.html
+++ b/MyBlog/home/templates/base.html
@@ -42,6 +42,7 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+      <a role='button' href='/admin' target="_blank" class="btn btn-outline-success m-2 my-sm-0">Admin Panel</a>
     </div>
   </nav>
 
