search function added

--- a/MyBlog/home/templates/base.html
+++ b/MyBlog/home/templates/base.html
@@ -38,8 +38,8 @@
 
 
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form method="get" action="/search" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" name="query" id="query" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
       <a role='button' href='/admin' target="_blank" class="btn btn-outline-success m-2 my-sm-0">Admin Panel</a>
