--- a/MyBlog/home/templates/home/contact.html
+++ b/MyBlog/home/templates/home/contact.html
@@ -10,21 +10,21 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="name" class="form-control" name="name" id="name" aria-describedby="name">
+            <input type="name" class="form-control" name="name" id="name" placeholder="Enter Your Name" aria-describedby="name">
         </div>
 
         <div class="form-group">
             <label for="name">Email address</label>
-            <input type="email" class="form-control" name="email" id="email" aria-describedby="email">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Enter Your Email" aria-describedby="email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="phone" class="form-control" name="phone" id="phone">
+            <input type="phone" class="form-control" name="phone" id="phone" placeholder="Enter Your Mobile no.">
         </div>
         <div class="form-group">
             <label for="content">Suggestions</label>
-            <textarea class="form-control" name="content" id="name" cols="30" rows="4"> </textarea>
+            <textarea class="form-control" name="content" id="name" cols="30" rows="4" placeholder="description"> </textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
