--- a/MyBlog/home/templates/home/login.html
+++ b/MyBlog/home/templates/home/login.html
@@ -7,13 +7,14 @@
 <h1 style="font-weight:500;">
 Login Here</h1>
 <form>
+{% csrf_token %}
       <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your unique username">
+    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your unique username" required>
   </div>
       <div class="form-group">
     <label for="pass">Password</label>
-    <input type="password" class="form-control" id="pass" name="pass" placeholder="Enter your password">
+    <input type="password" class="form-control" id="pass" name="pass" placeholder="Enter your password" required>
   </div>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
