--- a/MyBlog/home/templates/home/login.html
+++ b/MyBlog/home/templates/home/login.html
@@ -6,15 +6,15 @@
 <div class="container my-3">
 <h1 style="font-weight:500;">
 Login Here</h1>
-<form>
+<form action='/login' method='post'>
 {% csrf_token %}
       <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your unique username" required>
+    <input type="text" class="form-control" id="loginusername" name="loginusername" placeholder="Enter your unique username" required>
   </div>
       <div class="form-group">
     <label for="pass">Password</label>
-    <input type="password" class="form-control" id="pass" name="pass" placeholder="Enter your password" required>
+    <input type="password" class="form-control" id="loginpass" name="loginpass" placeholder="Enter your password" required>
   </div>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
