--- a/MyBlog/home/templates/home/search.html
+++ b/MyBlog/home/templates/home/search.html
@@ -5,33 +5,41 @@
 <div class="container my-4">
 
     <h2>Search Results:</h2>
+    {% if user.is_authenticated %}
     {% if allposts|length < 1 %}
     <p>No search result</p>
     Your search -<b>{{query}}</b>- did not match any result<br>
     Suggestions:
     <ul>
-    <li>
-    Make sure that all words are spelled correctly.</li>
-    <li>
-    Try different keywords.</li>
-    <li>
-    Try more general keywords.</li>
-    <li>
-    Try fewer keywords.</li></ul>
+        <li>
+            Make sure that all words are spelled correctly.</li>
+        <li>
+            Try different keywords.</li>
+        <li>
+            Try more general keywords.</li>
+        <li>
+            Try fewer keywords.</li>
+    </ul>
     {% endif %}
-{% for post in allposts %}
+    {% for post in allposts %}
     <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Article by {{post.author}}</strong>
             <h3 class="mb-0">{{post.title}}</h3>
             <div class="mb-1 text-muted">{{post.timestamp}}</div>
             <p class="card-text mb-auto">{{post.content | truncatechars:500}}</p>
-            <div class="my-2"><a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+            <div class="my-2"><a href="/blog/{{post.slug}}" role="button"
+                    class="btn btn-primary">Continue reading</a>
             </div>
         </div>
         <div class="col-auto d-none d-lg-block">
         </div>
     </div>
-{% endfor %}
+    {% endfor %}
+    {% else %}
+    <div class="container">
+        <h3>Login to see search results</h3>
+    </div>
+    {% endif %}
 </div>
 {% endblock body %}
