--- a/MyBlog/home/templates/home/home.html
+++ b/MyBlog/home/templates/home/home.html
@@ -19,7 +19,7 @@
   {% for i in allposts %}
   <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4  shadow-sm h-md-250 position-relative">
     <div class="col p-4 d-flex flex-column position-static">
-      <strong class="d-inline-block mb-2 text-primary">{{i.author}}</strong>
+      <strong class="d-inline-block mb-2 text-primary">Author-{{i.author}}</strong>
       <h3 class="mb-0">{{i.title}}</h3>
       <div class="mb-1 text-muted">{{i.timestamp}}</div>
       <p class="card-text mb-auto">{{i.content | truncatechars:560 }}</p>
