--- a/MyBlog/home/templates/home/about.html
+++ b/MyBlog/home/templates/home/about.html
@@ -1,6 +1,25 @@
-{% extends 'base.html' %}
-{% block title %}About{% endblock title %}
- {% block aboutactive %}active
-{% endblock aboutactive %}
-{% block body %}
+{% extends 'base.html' %} {% block title %}About{% endblock title %} {% block aboutactive %}active {% endblock aboutactive %} {% block body %}
+<div class="container my-3">
+    <table class="table table-bordered table-responsive-lg table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+        </thead>
+        <tbody class="tbody bg-warning">
+            {% for i in user %}
+            <tr>
+                <td>{{i.username}}</td>
+                <td>{{i.email}}</td>
+                <td>{{i.first_name}}</td>
+                <td>{{i.last_name}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+
+    </table>
+</div>
+
 {% endblock body %}
